# View-Rush

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  netlify.toml  package-lock.json
.github/: labeler.yml
client/: .env.example  README.md  coverage.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
fastapi-backend/: .dockerignore  .gitignore  Dockerfile  data_collecting.ipynb  docker-compose.yaml  generate-ssl-cert.ps1  generate-ssl-cert.sh  new_channel_ids.ipynb  requirements.txt
server/: .env.example  README.md  config.py  main.py  pyproject.toml
server/mlruns/0/: meta.yaml
server/mlruns/798221814442570689/: meta.yaml
server/mlruns/798221814442570689/4c474766dc104d66b3c14f5f42ecf6aa/: meta.yaml
server/mlruns/798221814442570689/895fee54694444fa9c541d223f1a0670/: meta.yaml
server/mlruns/798221814442570689/9efdd947e71549bc8cbc769f75e4a008/: meta.yaml
server/mlruns/798221814442570689/9efdd947e71549bc8cbc769f75e4a008/tags/: mlflow.runName
server/mlruns/870371538631987082/: meta.yaml
server/mlruns/870371538631987082/dfebb4ef5f5f4d01975f28b175bc50de/: meta.yaml
server/mlruns/870371538631987082/dfebb4ef5f5f4d01975f28b175bc50de/tags/: mlflow.runName  mlflow.source.name
server/models/: embedding_models.py
server/routers/: heatmap.py  heatmap_cross_attention.py  profile_embedding.py  test_youtube.py  user_profiling.py
server/services/: embedding_service.py  youtube_service.py
server/src/: main.py
server/src/api/: __init__.py
server/src/core/: config.py
(+209 files in other folders)
