[project]
name = "view-rush-server"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "supabase>=2.0.0",
    "gotrue>=2.0.0",
    "pytest>=7.0.0",
    "email-validator>=2.3.0",
    "pydantic[email]>=2.11.7",
]
