[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.0",
    "matplotlib>=3.10.6",
    "mlflow>=3.4.0",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "sentence-transformers==3.2.1",
    "uvicorn[standard]==0.30.6",
    "wikipedia==1.4.0",
]
